--- a/index.html
+++ b/index.html
@@ -55,8 +55,21 @@
           </div>
         </div>
       </div>
+      <span id="arrow-right">></span>
     </section>
-    <section class="game"></section>
+    <section class="game">
+      <p id="story-p">
+        Bavaria has fallen. The region is fractured and contested by multiple
+        factions. You are attempting to claim Bavaria for yourself and your
+        faction. Build the largest and most advanced army to conquer the region.
+      </p>
+
+      <div id="hud">
+        <button>Soldiers</button>
+        <button id="map">Map</button>
+        <button>Materials</button>
+      </div>
+    </section>
     <script src="script.js"></script>
   </body>
 </html>
