--- a/index.html
+++ b/index.html
@@ -65,11 +65,37 @@
       </p>
 
       <div id="hud">
-        <button>Soldiers</button>
+        <button id="soldier">Soldiers</button>
         <button id="map">Map</button>
-        <button>Materials</button>
+        <button id="mat">Materials</button>
       </div>
+      <div class="map-section">
+        <div class="map-container">
+          <div class="grid-item" id="grid-item-1">1</div>
+          <div class="grid-item" id="grid-item-2">2</div>
+          <div class="grid-item" id="grid-item-3">3</div>
+          <div class="grid-item" id="grid-item-4">4</div>
+          <div class="grid-item" id="grid-item-5">5</div>
+          <div class="grid-item" id="grid-item-6">6</div>
+          <div class="grid-item" id="grid-item-7">7</div>
+          <div class="grid-item" id="grid-item-8">8</div>
+          <div class="grid-item" id="grid-item-9">9</div>
+        </div>
+        <h1>Key</h1>
+        <h1>
+          D = Desert <br />
+          E = Ergonia <br />
+          S = Sicordi <br />
+          B = Old Bavaria
+        </h1>
+      </div>
+      <div class="mat-section">
+        <div class="stats"></div>
+        <button>Collect Scrap</button>
+      </div>
+      <div class="soldier-section"></div>
     </section>
+
     <script src="script.js"></script>
   </body>
 </html>
