--- a/index.html
+++ b/index.html
@@ -68,32 +68,60 @@
         <button id="soldier">Soldiers</button>
         <button id="map">Map</button>
         <button id="mat">Materials</button>
+        <button id="tech">Tech Tree</button>
       </div>
       <div class="map-section">
         <div class="map-container">
-          <div class="grid-item" id="grid-item-1">1</div>
-          <div class="grid-item" id="grid-item-2">2</div>
-          <div class="grid-item" id="grid-item-3">3</div>
-          <div class="grid-item" id="grid-item-4">4</div>
-          <div class="grid-item" id="grid-item-5">5</div>
-          <div class="grid-item" id="grid-item-6">6</div>
-          <div class="grid-item" id="grid-item-7">7</div>
-          <div class="grid-item" id="grid-item-8">8</div>
-          <div class="grid-item" id="grid-item-9">9</div>
+          <div class="grid-item" id="grid-item-1"></div>
+          <div class="grid-item" id="grid-item-2"></div>
+          <div class="grid-item" id="grid-item-3"></div>
+          <div class="grid-item" id="grid-item-4"></div>
+          <div class="grid-item" id="grid-item-5"></div>
+          <div class="grid-item" id="grid-item-6"></div>
+          <div class="grid-item" id="grid-item-7"></div>
+          <div class="grid-item" id="grid-item-8"></div>
+          <div class="grid-item" id="grid-item-9"></div>
         </div>
         <h1>Key</h1>
         <h1>
-          D = Desert <br />
+          H = Hills <br />
           E = Ergonia <br />
           S = Sicordi <br />
           B = Old Bavaria
         </h1>
       </div>
       <div class="mat-section">
-        <div class="stats"></div>
-        <button>Collect Scrap</button>
+        <div class="stats">
+          <h1 id="pop">Population: 0</h1>
+          <h1 id="fuel">Fuel: 0</h1>
+          <h1 id="scrap">Scrap: 0</h1>
+        </div>
+        <button id="scrap-btn">Collect Scrap</button>
+        <button id="fuel-btn">Drill for Oil</button>
       </div>
-      <div class="soldier-section"></div>
+      <div class="soldier-section">
+        <div class="current-soldier">
+          <h1>Mk1<span id="soldier-upgrade">+</span></h1>
+          <h1>Gun:</h1>
+          <h1>Armor</h1>
+          <h1>Equipment</h1>
+        </div>
+        <div class="soldier-btns">
+          <button>Guns</button>
+          <button>Armor</button>
+          <button>Equipment</button>
+        </div>
+
+        <div class="guns"></div>
+        <div class="armor"></div>
+        <div class="equipment"></div>
+      </div>
+      <div class="tech-section">
+        <button>Scrap Harvester +2s/sec</button>
+        <button>Oil Drill +2f/sec</button>
+        <button>Wheat Production +2p/Sec</button>
+        <button>Build Homes +2p/Sec</button>
+      </div>
     </section>
 
     <script src="script.js"></script>
